--- a/integration/antora.yml
+++ b/integration/antora.yml
@@ -1,3 +1,4 @@
+```yaml
 name: integration
 title: Manual de Integración
 version: ~
@@ -10,3 +11,5 @@ asciidoc:
     lang: es
 nav:
 - modules/ROOT/nav.adoc
+
+```
